# CFCRPL-creditRiskLib

./: .gitignore  pyproject.toml
.github/workflows/: workflow.yml
credit_risk_lib/config/: __init__.py  config_factory.py  json_config.py
credit_risk_lib/mlmodel/: conf_validator.py  mllogger.py  mlmodel.py
credit_risk_lib/pipeline/: pipeline.py  pipeline_step_interface.py
credit_risk_lib/pipeline/ingest/: bigquery.py  cloud_event.py  csv.py  ingest_interface.py  json.py
credit_risk_lib/pipeline/load/: bigquery.py  load_interface.py
credit_risk_lib/pipeline/transform/: transform_interface.py
credit_risk_pipeline_lib/: pipeline.py  pipeline_step_interface.py
credit_risk_pipeline_lib/config/: __init__.py  config_factory.py  json_config.py
credit_risk_pipeline_lib/ingest/: cloud_event.py  csv.py  ingest_interface.py
credit_risk_pipeline_lib/load/: bigquery.py  load_interface.py
credit_risk_pipeline_lib/mlmodel/: mlmodel.py
credit_risk_pipeline_lib/pipeline/: pipeline.py
credit_risk_pipeline_lib/pipeline/ingest/: cloud_event.py  csv.py  ingest_interface.py  json.py
credit_risk_pipeline_lib/pipeline/load/: bigquery.py  load_interface.py
credit_risk_pipeline_lib/pipeline/transform/: transform_interface.py
credit_risk_pipeline_lib/transform/: transform_interface.py
