[tool.poetry]
name = "credit-risk-lib"
version = "0.1.0"
description = ""
authors = ["Santiago Puerta <spuertaf@eafit.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
pandas = "^2.2.2"
functions-framework = "^3.8.1"
pandas-gbq = "^0.23.1"
typeguard = "^4.3.0"
pydantic = "^2.8.2"
mlflow = "^2.15.1"
keyrings-google-artifactregistry-auth = "^1.1.2"
google-cloud-bigquery = "^3.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
